few changes to file structure

--- a/stream.ipynb
+++ b/stream.ipynb
@@ -43,24 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "consumer_key = '<your consumer key>'\n",
-    "consumer_secret = '<your consumer secret>'\n",
-    "access_token = '<your access token>'\n",
-    "access_token_secret = '<your access token secret>'\n",
-    "bearer_token = '<your bearer token>'"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tweepy"
+    "import tweepy\n",
+    "from keys import *"
    ]
   },
   {
@@ -5259,7 +5247,6 @@
    ],
    "source": [
     "def main():\n",
-    "    bearer_token = '<your bearer token>'\n",
     "    headers = create_headers(bearer_token)\n",
     "    rules = get_rules(headers, bearer_token)\n",
     "    delete = delete_all_rules(headers, bearer_token, rules)\n",
